--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.username=spring
 spring.datasource.password=spring
 spring.datasource.url=jdbc:mysql://localhost:3306/springdb
 spring.jpa.hibernate.ddl-auto=update
+
+hashLiveSeconds=86400
