implement hash url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springdb
 spring.jpa.hibernate.ddl-auto=update
 
 hashLiveSeconds=86400
+hashLength=6
