add application operation script; readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
+# Credential could lerverage cloud services by setting environment variable only in web server and deploy service.
+
+# mysql user name
 spring.datasource.username=spring
+# mysql user password
 spring.datasource.password=spring
+# mysql api
 spring.datasource.url=jdbc:mysql://localhost:3306/springdb
 spring.jpa.hibernate.ddl-auto=update
 
+# hash-url life time in DB (seconds)
 hashLiveSeconds=86400
+# length of hash string to be generated
 hashLength=6
